Updated scrollbar plugin

--- a/gw2t.css
+++ b/gw2t.css
@@ -183,15 +183,35 @@ div#qTip img {
 /*
  * Style for perfect-scrollbar JS plugin by Hyunje Alex Jun.
  */
+.ps-container {
+	overflow: hidden !important;
+}
 .ps-container.ps-active-x > .ps-scrollbar-x-rail, .ps-container.ps-active-y > .ps-scrollbar-y-rail {
 	display: block;
+}
+.ps-container.ps-in-scrolling {
+	pointer-events: none;
+}
+.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail {
+	background-color: #eee;
+	opacity: 0.9;
+}
+.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x {
+	background-color: #999;
+}
+.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
+	background-color: #eee;
+	opacity: 0.9;
+}
+.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+	background-color: #999;
 }
 .ps-container > .ps-scrollbar-x-rail {
 	display: none;
 	position: absolute;
 	border-radius: 4px;
 	opacity: 0;
-	transition: background-color 0.2s linear, opacity 0.2s linear;
+	transition: background-color .2s linear, opacity .2s linear;
 	bottom: 3px;
 	height: 8px;
 }
@@ -199,20 +219,16 @@ div#qTip img {
 	position: absolute;
 	background-color: #aaa;
 	border-radius: 4px;
-	transition: background-color 0.2s linear;
+	transition: background-color .2s linear;
 	bottom: 0;
 	height: 8px;
-}
-.ps-container > .ps-scrollbar-x-rail.in-scrolling {
-	background-color: #eee;
-	opacity: 0.9;
 }
 .ps-container > .ps-scrollbar-y-rail {
 	display: none;
 	position: absolute;
 	border-radius: 4px;
 	opacity: 0;
-	transition: background-color 0.2s linear, opacity 0.2s linear;
+	transition: background-color .2s linear, opacity .2s linear;
 	right: 0px;
 	width: 8px;
 }
@@ -220,20 +236,29 @@ div#qTip img {
 	position: absolute;
 	background-color: #aaa;
 	border-radius: 4px;
-	transition: background-color 0.2s linear;
+	transition: background-color .2s linear;
 	right: 0;
 	width: 8px;
 }
-.ps-container > .ps-scrollbar-y-rail.in-scrolling {
+.ps-container:hover.ps-in-scrolling {
+	pointer-events: none;
+}
+.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail {
 	background-color: #eee;
 	opacity: 0.9;
+}
+.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x {
+	background-color: #999;
+}
+.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
+	background-color: #eee;
+	opacity: 0.9;
+}
+.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+	background-color: #999;
 }
 .ps-container:hover > .ps-scrollbar-x-rail, .ps-container:hover > .ps-scrollbar-y-rail {
 	opacity: 0.6;
-}
-.ps-container:hover > .ps-scrollbar-x-rail.in-scrolling, .ps-container:hover > .ps-scrollbar-y-rail.in-scrolling {
-	background-color: #eee;
-	opacity: 0.9;
 }
 .ps-container:hover > .ps-scrollbar-x-rail:hover {
 	background-color: #eee;
