Updated golem rush time

--- a/gw2t.css
+++ b/gw2t.css
@@ -1777,7 +1777,7 @@ button.btnToggle {
 }
 .dly_region_ascalon { background-position: 0 0; }
 .dly_region_kryta { background-position: -32px 0; }
-.dly_region_maguuma { background-position: -64px 0; }
+.dly_region_jungle { background-position: -64px 0; }
 .dly_region_orr { background-position: -96px 0; }
 .dly_region_shiverpeaks { background-position: -128px 0; }
 .dly_region_wastes { background-position: -160px 0; }
