--- a/gw2t-mobile.css
+++ b/gw2t-mobile.css
@@ -21,7 +21,7 @@ html {
 	bottom: 24px;
 }
 
-#panelLeft {
+#panelMap {
 	display: none;
 }
 
@@ -30,7 +30,7 @@ html {
 	background: none;
 }
 
-#panelRight {
+#panelApp {
 	position: relative;
 	display: inline-block;
 	text-align: left;
@@ -45,7 +45,7 @@ body, html, .panelMain, #windowMain, #paneContent article {
 	height: auto;
 }
 
-.paneRight {
+.paneApp {
 	right: auto;
 	border-left: none;
 	box-shadow: 0px 0px 16px #111;
