Revert 24 hr bug

--- a/gw2t-mobile.css
+++ b/gw2t-mobile.css
@@ -96,7 +96,7 @@ body, html, .panelMain, #windowMain, #paneContent article {
 	width: 24px; height: 24px;
 }
 
-.chnBar, .chnSlot {
+.barChain, .barChainDummy {
 	margin-bottom: 8px;
 }
 
