--- a/gw2t-tile.css
+++ b/gw2t-tile.css
@@ -123,7 +123,7 @@ body, #paneContent article {
 
 .chnTitle h1 {
 	width: 70%;
-	font-size: 1.5vmax;
+	font-size: 18px;
 	font-weight: bold;
 	text-align: center;
 	cursor: url("img/cursor/auto.cur"), auto;
